queryoptionsfromqueryvisitor and shardquerylogic